character_identify修复?真修好了吗

--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -15,6 +15,7 @@ acg_information:
 basic_plugin:
   setu:
     r18mode: true
+    download: true #关掉的话就是直接发送url，灰度图不生效。
     gray_layer: true #是否开启灰度图功能
   tarot:
     lock: false #是否开启卡片锁定功能，现在没写锁定，开了也没用
