--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -66,7 +66,7 @@ ai绘画:
   sd图片是否保存到生图端: true   #是否将生成的图片保存在webui的outputs里
   novel_ai画图: false
   sd画图默认分辨率: '1024,1536' # 宽,高（别带空格）
-  sd重绘默认分辨率: '1064,1064'
+  sd最大分辨率: '1600,1600'
   sd队列长度限制: 6     #防止有人刷绘图指令。
   ai绘画所需权限等级: 0
   no_nsfw_groups:               #禁止色图的群号
