--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -69,7 +69,8 @@ ai绘画:
   sd最大分辨率: '1600,1600'
   sd队列长度限制: 6     #防止有人刷绘图指令。
   ai绘画所需权限等级: 0
-  no_nsfw_groups:               #禁止色图的群号
+  禁止nsfw: true
+  allow_nsfw_groups:               #禁止色图的群号
   - '111'
   - '222'
   - '333'
