--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -69,11 +69,9 @@ ai绘画:
   sd最大分辨率: '1600,1600'
   sd队列长度限制: 6     #防止有人刷绘图指令。
   ai绘画所需权限等级: 0
-  禁止nsfw: true
+  禁止nsfw: false
   allow_nsfw_groups:               #禁止色图的群号
-  - '111'
-  - '222'
-  - '333'
+  - 123
   其他默认绘图参数: # 各参数见文档https://eridanus-doc.netlify.app/docs/%E6%8B%93%E5%B1%95%E5%8A%9F%E8%83%BD/ai%E7%BB%98%E7%94%BB#%E6%89%80%E6%9C%89%E5%8F%AF%E8%B0%83%E8%8A%82%E5%8F%82%E6%95%B0%E5%88%97%E8%A1%A8
     - --d 0.7
     - --p {},rating:general, best quality, very aesthetic, absurdres
