--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -5,6 +5,7 @@ bot_config:
   group_handle_logic_operate_level: 1000 #拉黑、解黑群所需操作权限
   邀请bot加群所需权限: 0
   申请bot好友所需权限: 0
+  record_mface: true #是否收集主人的表情包
 api_implements: #花里胡哨
    nudge:               #戳一戳设置。
      counter_probability: 100 #反击概率
