--- a/run/streaming_media/config.yaml
+++ b/run/streaming_media/config.yaml
@@ -7,3 +7,9 @@ bili_dynamic:     #下面的设置暂不可用，请暂时不要修改
 网易云卡片:    #绘制网易云歌曲分享卡片
   enable: true
   解析自带音频下载url: false #涉及付费音乐版权问题，只能以文件形式发送了,不允许进行传播、销售等商业活动!!
+流媒体:
+  youtube:
+    download_audio_level: 0  #下载音频所需权限等级
+    download_video_level: 30  #下载视频所需权限等级
+  asmr:
+    download_audio_level: 0  #下载音频所需权限等级
