--- a/run/streaming_media/bili_dynamic.yaml
+++ b/run/streaming_media/bili_dynamic.yaml
@@ -1,5 +1,7 @@
 295040217:
-  latest_dynamic_id: ['1012448010741743617',"0"]
+  latest_dynamic_id:
+  - '1012448010741743617'
+  - '0'
   push_groups:
   - 913122269
 
