--- a/run/scheduled_tasks/sheduled_tasks_push_groups_ordinary.yaml
+++ b/run/scheduled_tasks/sheduled_tasks_push_groups_ordinary.yaml
@@ -1,24 +1,60 @@
 每日天文:
   groups:
-    - 0
+  - 0
+  - 879886836
+  users:
+  - 0
 bing每日图像:
   groups:
-    - 0
+  - 0
+  - 879886836
+  users:
+  - 0
 单向历:
   groups:
-    - 0
+  - 0
+  - 879886836
+  users:
+  - 0
 bangumi:
   groups:
-    - 0
+  - 0
+  - 879886836
+  users:
+  - 0
 nightASMR:
   groups:
-    - 0
+  - 0
+  - 879886836
+  users:
+  - 0
 摸鱼人日历:
   groups:
-    - 0
+  - 0
+  - 879886836
+  users:
+  - 0
 新闻:
   groups:
-    - 0
+  - 0
+  - 879886836
+  users:
+  - 0
 免费游戏喜加一:  #测试
   groups:
-    - 0
+  - 0
+  - 879886836
+  users:
+  - 0
+早安:
+  groups:
+  - 0
+  - 879886836
+午安:
+  groups:
+  - 0
+  - 879886836
+晚安:
+  groups:
+  - 0
+  - 879886836
