转为Int类型，便于webui编辑

--- a/run/ai_llm/config.yaml
+++ b/run/ai_llm/config.yaml
@@ -15,11 +15,11 @@ llm:
   enable_proxy: False
   max_history_length: 40 #最大上下文长度
   仁济模式: 
-    随机回复概率: 0  #随机回复概率，0-1，可精确到小数点后两位，0为不随机。
+    随机回复概率: 0  #随机回复概率，0-100，0为不随机。
     算法回复:
       enable: false
-      相似度阈值: 0.3
-      频率阈值: 0.15
+      相似度阈值: 30
+      频率阈值: 15
       消息列表最小长度: 10
       信息熵阈值: 2.0
   Quote: False     #回复时引用
