--- a/run/ai_llm/config.yaml
+++ b/run/ai_llm/config.yaml
@@ -9,7 +9,8 @@ llm:
   联网搜索显示原始数据: True   #此处联网搜索基于函数调用实现(非官方)，与上面的联网搜索不同，所以可以同时开启函数调用和实现联网搜索。
   读取群聊上下文: true  #开启上下文读取功能，可读取群聊历史消息，并根据上下文进行回复。
   可获取的群聊上下文长度: 50 # 仁济模式开算法回复务必开上下文
-  长期记忆: True  #ai总结prompt，某种程度上也算中长期记忆
+  长期记忆: True  #ai总结用户特征，某种程度上也算中长期记忆
+  记忆更新间隔: 600  #单位秒
   prefix: #可以用于触发bot的指令前缀
     - "测试机"
   aiReplyCore: True   #ai回复核心，将优化其他功能回复表现
