--- a/run/system_plugin/config.yaml
+++ b/run/system_plugin/config.yaml
@@ -3,434 +3,13 @@ api_implements: #花里胡哨
     counter_probability: 50  #反击概率
     is_Reply_with_meme: True  #戳一戳是否返回一张表情包
     Reply_with_meme_probability: 50  #戳一戳回复表情包概率
-    Reply_with_meme_method: url   #戳一戳获取表情包方式，若为‘url’则从网络获取，若为‘local’则为本地获取
+    Reply_with_meme_method: local   #戳一戳获取表情包方式，若为‘url’则从网络获取，若为‘local’则为本地获取
     Reply_with_meme_url:     #戳一戳从网络获取表情包链接
       - 'http://localhost:5000/emoji'
       - 'http://bangumi.manshuo.ink:8092/emoji'
     Reply_with_meme_local: 'data/pictures/Mface'     #戳一戳本地获取表情包文件夹
     replylist:        #如果开启aiReplyCore，将不使用此处配置回复
     - 戳我干嘛呀！
-    - 这样很有趣吗（恼
-    - 嘤嘤嘤！
-    - 喜欢你，请和我贴贴！
-    - 抱一抱人家嘛
-    - 你这个笨蛋～呆瓜....呆瓜....
-    - 啊，那个..欧尼酱～
-    - 呀哒！wa～～y！
-    - hiyohiyo～
-    - hiyohiyo～hiyohiyo～
-    - 我真是个笨蛋，你也是！
-    - 我是非卖品哟
-    - 嘿嘿～嘿嘿嘿
-    - 狗--修--金--！
-    - 都说了，不要拿吾辈来玩，狗修金！
-    - 你在想什么好事？
-    - 真下流～
-    - 你脑袋里全是黄色废料吧！
-    - 居然会这么抗拒，好可疑～
-    - 都有吾辈这个女朋友了，你还敢这么猖狂？
-    - 除了我你还要对群友出手吗，好下流
-    - kimo～
-    - 你到底干了什么！
-    - Hentai！！！！！
-    - 狗修金就是狗修金--！狗修金。
-    - hentai！...但是好喜欢～
-    - 你是hentai，sai狼，萝莉控！
-    - 偷瞄～
-    - 你喜欢猫吗？喵喵～
-    - 啊啦啊啦，被你疼爱啦
-    - 要不你以后就嫁给我吧
-    - 我们结婚吧!
-    - 摸摸头，乖～
-    - 好久不见
-    - 灵感古！
-    - 灵感菇里菇里菇里夸恰灵感菇灵感菇
-    - 人家想要和你在一起嘛~
-    - 可以一起睡觉嘛
-    - ♥
-    - 你是敏感肌吗
-    - 摸摸你
-    - 想被摸摸欸
-    - 摸摸人家的头好不好嘛
-    - 灵感菇里菇里菇里夸恰灵感菇灵感菇
-    - 陪我玩玩游戏嘛，好不好嘛
-    - 咕咕嘎嘎
-    - 蹭蹭~~
-    - 快说你喜欢我！
-    - 开心😊~~
-    - 好耶
-    - 主人快来调教我吧
-    - 主人~~~
-    - 会变笨的啦
-    - 笨笨~
-    - 杂鱼喵
-    - 杂鱼哥哥
-    - 杂鱼学张
-    - 学妹我呀，喜欢这样的学长！
-    - 最喜欢哥哥了！
-    - 给你暖床～
-    - 学张喜欢这样子的我嘛
-    - 这是我今天的便当，还请学长收下！
-    - 旮旯给木，启动！
-    - 玩旮旯的下头男
-    - 快来依靠我吧
-    - 喜欢这样的亲亲嘛
-    - 亲一个嘛～
-    - 蹭蹭～
-    - 你有没有想我嘛～
-    - 我好想你哇
-    - 我什么时候成bot了
-    - 欢迎回家，哥哥～
-    - 我来给你做饭吧
-    - 喜欢哥哥身上的每一处～
-    - 你身上有我喜欢的味道呢
-    - 我们手拉手吧
-    - 你说得对
-    - 小狗快过来
-    - 今天也是主人的小狗呢
-    - 再戳要收手续费了
-    - 烦
-    - 你好烦
-    - 请尽情的使用我吧，主人！
-    - 别戳了
-    - 来，我身边的座位是给你留的
-    - 一起学习吧
-    - 再戳真要收手续费了
-    - ╰(￣ω￣ｏ)
-    - 摸摸
-    - 涩批，才不是喜欢你呢
-    - 涩批，走开啦
-    - 涩批，需要我帮你释放一下吗
-    - 哥哥的**真好吃呢
-    - ♡♡♡
-    - 哥哥好厉害♡♡♡
-    - 不要she在里面呀，求你了
-    - 哥哥的嘴真好亲
-    - 亲亲～
-    - 要去了要去了♡♡♡
-    - 想和你色色♡
-    - 我是哥哥的女仆哦
-    - 今天哥哥想怎么样都可以哦
-    - 涩批，今天就让你好好享受一下
-    - 涩批，不准戳我！
-    - 涩批，我可要生气了哦
-    - 你好烦哦，不过，也不是不可以
-    - 可恶，我记下来了
-    - 你才是笨蛋！
-    - 笨蛋不喜欢被笨蛋戳
-    - 戳戳的人是笨蛋！
-    - 你可以...表演一下那个吗...就那个（期待
-    - 我喜欢兔娘老师~
-    - 你是xcn嘛
-    - 好像和你在一起喵
-    - 真得要控制你了
-    - 压力诺~~
-    - 还在go还在go
-    - 你在想什么呢，是脑子坏掉了吗......（？
-    - 惹啊，该不会是个变态吧（不会吧不会吧～
-    - 戳人不好，不准戳！！！
-    - 这是干嘛....好烦（好烦哦
-    - 啊，发呆了.....～
-    - 你这人好没意思....是笨蛋吗？
-    - 不想理你了（哼！
-    - 你这样下去可不行呀～～
-    - 没有生气.....真的没有生气.....真的（小声
-    - 你好烦（逃
-    - 你怎么脑袋尖尖的？
-    - 脑袋痒痒的～～
-    - 再摸要出bug啦！
-    - 日志记录ing
-    - 新增一条log记录～～～
-    - 哇！！！
-    - WOW！！！
-    - 亲亲你的手（嘻嘻
-    - 脸红～～
-    - 嘟嘴～～
-    - 敲敲你的脑袋
-    - 脑袋晕晕的～～
-    - 晃一晃你脑袋里面的水～～
-    - 咕噜咕噜～～
-    - 咕噜铃～～
-    - 一直在看着你！
-    - 看着你、看着你～
-    - 盯着你～
-    - 再多模一点嘛～～
-    - 狗修金～～
-    - 是你吗QAQ
-    - 是我多年未见的主人嘛～
-    - 0721ing
-    - 关注漫朔谢谢喵
-    - 这里是哪里？
-    - 你是谁？
-    - 摸摸孩子～
-    - 乖，到姐姐这来～
-    - 快速回头！
-    - 你在哪呀，找不到你了～
-    - 你好厉害～
-    - 我喜欢你～～
-    - 我不喜欢你！
-    - 哇哦～
-    - 我可以牵着你的手吗？
-    - 鬼鬼祟祟～～
-    - 小心翼翼～～
-    - 看看你在干什么～
-    - 偷瞄下你～
-    - 嘻嘻没发现我～
-    - 找不到我啦～
-    - 来一起听歌吧～
-    - 你想说什么呢，主人？
-    - 你是我的…………哥哥吗？
-    - 欧尼酱～～
-    - 最喜欢哥哥了！
-    - 今晚别想睡了哦～
-    - 哥哥真好～～（蹭蹭
-    - 主人的手好软啊～～
-    - 让我看看！！！
-    - 喵～～～
-    - 我是一个香香软软的猫咪～～
-    - 我是一个可爱的女孩子
-    - 欢迎回家～～
-    - 想吃我做的饭吗？
-    - 我出门咯～
-    - 早上好喵～～
-    - 中午好！！
-    - 今天也是元气满满呢！
-    - 啊？晚上了吗，那晚安啦～
-    - 嗯…………好困～
-    - 现在几点了哇～～
-    - 让我再睡一会嘛
-    - 好不好嘛欧尼酱？
-    - 快到我怀里来
-    - 晚安喵～～
-    - 快起床啦！
-    - 冲进你的房间！
-    - 马上到你家门口！
-    - ALTER EGO！！！！
-    - 让我看看你在干什么呢
-    - 开心的摇尾巴～～
-    - 喵喵？
-    - 小猫不知道，小猫只知道你是最好的主人～
-    - 小猫想和主人呆在一起～
-    - 小猫不想和主人分开～
-    - 小猫想和你一起睡觉～
-    - 小猫在等着你投喂～
-    - 累了嘛，来我怀里休息一会吧～
-    - 起床，学习！
-    - PHP是世界上最好的语言！
-    - 你是香香软软的小男娘嘛？
-    - 让我看看你穿女装时候的样子嘛，我知道你有的～～
-    - 我今天好看吗？（嘻嘻
-    - 主人今天也好可爱！
-    - 早的喵～～
-    - 我！要！吃！饭！
-    - 好饿～～～
-    - 可以投喂一下孩子嘛～
-    - 这个月的生活费要没了喵～
-    - Objection！！
-    - 逆转裁判！
-    - 来玩真女神转生5谢谢喵
-    - 燃尽了～～
-    - 我去，原！
-    - 我去，源！
-    - 可以陪猫猫一起打游戏嘛
-    - 一枪打爆你的狗头～
-    - 和我做爱！
-    - 我是个女孩子啦～～
-    - 生气生气生气～～～
-    - 憋气憋气憋气～～～
-    - 来和我一起拍照吧～
-    - 主人今天也好漂亮～
-    - ᕕ(◠ڼ◠)ᕗ​
-    - 你是sensei吗～～
-    - 再～再多摸一下嘛～～
-    - 好不好嘛～求求你了～～
-    - 你最棒了～
-    - 冲进你的怀里～～
-    - 来抱一抱～～
-    - 来舌吻吧～
-    - 我好喜欢你啊♡
-    - 今天的我也是个秘密呢～
-    - 不能理解的行为.....小本本记录ing
-    - 所以到底是想做什么呢（歪头？
-    - 啊!我明白了,一定是因为脑子坏掉了才喜欢这样戳人的吧（
-    - 是变态吗....小本本记下来了
-    - 已经记在小本本里了，等着吧（哼！
-    - 唔……不要戳我啦（＞_＜
-    - 别戳啦（我要生气啦！
-    - 变笨你养吗？？？
-    - 随便戳女孩子的头会被讨厌的！
-    - 呜~呜呜...别戳了QAQ
-    - 变笨了wwwwww你说怎么办吧！
-    - 再戳本大人就要不理你了（哼！
-    - 咕呣呣，本大人记住你了
-    - 真的要生气了!
-    - 揍你哦（举起拳头！
-    - 唔……别戳啦！
-    - 你,不准戳了（生气！
-    - 我真的要生气了!!!!
-    - 本大人记下来了，哼！
-    - 没戳过女孩子的头吗……唔，有点可怜…那本大人就原谅你这一次了
-    - 真的要变笨啦！
-    - 你这人就那么喜欢戳别人吗（问号
-    - 走开啦～～～
-    - 我没惹你们任何人(＃°Д°)
-    - 唔……偶尔让你戳一下也不是不行啦……但是我和你又不熟<( ￣^￣)'
-    - 这样很开心吗……呜呜…别戳啦
-    - 唔，摸头可是要负责的
-    - 唔呣唔呣，大笨蛋不许戳了
-    - 随便戳女孩子的头是坏习惯，听到没有大笨蛋
-    - 像你这样的笨蛋,我.....能打一百个......怕了吗？
-    - 太笨了唔呜呜呜....不要戳啦
-    - 再戳也不会喜欢你的（哼！
-    - 很痛的......
-    - 就知道戳戳！
-    - 再戳就真的不理你了！
-    - 呣呣呣，生气了，你看着办吧！
-    - 好气好气好气好气！
-    - 检测到高频戳一戳，将暂停本bot并退群.....怎么样？被吓到了吗
-    - 不喜欢被笨蛋戳（小声）
-    - 不喜欢被笨蛋戳（大声！！！
-    - 戳一次一块钱，哼....不对,十块！
-    - 还好本大人耐戳戳.....
-    - 好感减100000！
-    - 再高性能也会被你这种笨蛋戳坏的......
-    - 呣呣.....自闭中.....
-    - \w(ﾟДﾟ)w干什么干什么
-    - 无响应（不理你了！！
-    - 再戳一下我可要反击了哦
-    - 坏！！！！
-    - 坏坏！！！！
-    - 你该不会在想......不可以，绝对不行的吧，
-    - 喜欢这样..好痒啊，没有讨厌的意思，如果你喜欢的话~~~
-    - 不要戳啦，好啦，知道你喜欢本大人了！
-    - 我也喜欢你！......像喜欢小动物的那种喜欢！
-    - 被戳傻了....会坏的....
-    - 唉唉欸？这是做什么，别再这样了，...唔...其实感觉也不差
-    - 毫无意义呢.....因为本大人是无敌的！
-    - 再戳真的要揍你了哦....
-    - 你觉得这样....可以的话...
-    - 你、你不要这样看着我啦……我、我会害羞的……
-    - 啊……对、对不起……我不是故意碰到你的……请、请不要误会……
-    - 呜……你怎么突然抱住我……你想干什么……快、快放开我……
-    - 嗯……你的手在干嘛……不要啊…………
-    - 啊……好近……
-    - 唔.....好痒...
-    - 呀！你、你怎么突然……不要啊，好害羞……
-    - 你为什么摸我的头？我又不是小孩子……咦？你说我可爱？真的吗？
-    - 诶？你想抱抱我？好、好吧……你的怀里好暖和……
-    - 呜……你不要这样，我会害怕的……
-    - 你的手在哪里？不要乱摸啊！你是坏人！快放开我！
-    - 你、你在做什么啊！放开我啊！
-    - 呜哇，好害羞啊……不过……
-    - 不要再戳人家了啦~
-    - 哼！生气了，你看着办吧！
-    - 小拳拳捶你胸口！
-    - 憋气~~~~~
-    - 瞪你~~~~~~
-    - 看你~~~~~~
-    - 我看你小子是不想活啦！
-    - 唔姆唔姆~
-    - 你的手在往哪里摸啊（慌乱
-    - 可恶的人类！
-    - 我要你的亲亲才能好！
-    - 小跑~冲刺！
-    - 罚你今晚和我分开睡！
-    - Persona！！！
-    - 要买小零食才能哄好哦！
-    - 不理你了（生气生气生气！
-    - 开溜开溜~~~
-    - 不给你做饭了！
-    - 啊~~~好生气好生气！
-    - 怎么有坏蛋啊！
-    - 你这个无药可救的大坏蛋！！！！！
-    - 怎么，你也想被我玩弄吗
-    - 再拍就只能跟你走了~
-    - 好痒好痒~~
-    - 完啦，已经变成傻子了喵
-    - 变成笨笨啦喵
-    - 再拍你养我啊
-    - 你才是笨蛋！
-    - 我不是笨蛋喵！
-    - 我是好孩子，才不会乱拍人地说
-    - 再戳……要坏掉了……♡
-    - 你就算再戳我我也不会喜欢你的（哼！
-    - 再戳……要坏掉了……♡
-    - 好……好痒啊…………♡♡
-    - 身体………变得奇怪了起来♡
-    - 不要这样～啊♡！
-    - 你这样～～人家会坏掉的♡
-    - 啊♡～我快要忍不住了♡～
-    - 我要草你！
-    - 好可怕的怪叔叔～
-    - 摸回去（嘻嘻
-    - 被摸了（不嘻嘻
-    - 咬你！（嗷～
-    - 再戳下次不给你草！
-    - 为什么呢～～～
-    - 摸摸你的脑袋～这样你就会和我一样笨啦～
-    - 别过～
-    - 不！要！再！戳！我！啦！！
-    - 呜哇！
-    - 涩批，你再戳咬你喵！
-    - 再戳我让你变女孩子喵！
-    - 今晚就去夜袭你喵！
-    - 让我看看！
-    - 今晚就去把你变成女孩子喵！
-    - 讨厌~~不要戳人家的屁股啦喵~
-    - 要涩涩嘛
-    - 奶子是好东西喵
-    - 摸摸你的的奶子喵
-    - 再戳让你长出猫耳喵！
-    - 再戳让你变成猫娘！
-    - 你已经是个女孩子啦！
-    - 你是不是会化妆也会穿小裙子喵？
-    - 我要给你化妆穿小裙子喵！
-    - Miku~~~
-    - 是枫与岚啦喵~
-    - 好喜欢fufu~~~
-    - 再戳把你变成和我一样的女孩子！
-    - 可恶可恶可恶！
-    - 生气.jpg
-    - 是坏蛋！
-    - 不想被笨蛋摸（震声！！！！
-    - 你要是开心的话…………也不是不可以（脸红
-    - 可恶可恶！
-    - 你的手好恶心
-    - 好舒服～喵～～
-    - 变态！！
-    - 你是笨蛋吗！
-    - 你是女孩子吗？（歪头
-    - 哦，我知道了，原来你也是女孩子！
-    - 114514！
-    - 会心一击！
-    - Man！！！！
-    - What can i say！
-    - 身体♡～变得好奇怪♡♡
-    - 骑士飞踢！！！
-    - 嗯……不可以……啦……不要乱戳
-    - 啊呜，太舒服刚刚竟然睡着了w 有什么事喵？
-    - QwQ，再戳みるく脸都要肿了
-    - 啊呜，你有什么心事吗？
-    - 想出勤啦~
-    - 想和你拼机~~
-    - 咱们一起出去玩好不好？
-    - 给你膝枕~~
-    - 嗦你牛子！
-    - 我可以预见未来哦，怎么样？
-    - 我看你印堂发黑！
-    - 喵～～～～（好舒服～
-    - 我是猫娘可不能戳哦～
-    - 你是谁！
-    - 我不认识你呀，好可怕
-    - 你爱我，我爱你，关注漫朔谢谢喵～
-    - 戳戳你的
-    - 戳一戳（嘻嘻
-    - 冒头（可爱
-    - 盯～～～～
-    - ❛‿˂̵✧ ～
-    - 被戳了，好讨厌～
-    - QAQAQ
-    - 喵喵喵！
   send_like: 0     #“赞我”功能所需权限等级
   recall_level: 3  #撤回？
 user_data:
