--- a/run/scheduled_tasks/config.yaml
+++ b/run/scheduled_tasks/config.yaml
@@ -41,6 +41,11 @@ scheduledTasks:    #其他定时任务模块的内容会陆续转到这里
   bing每日图像:
     enable: true
     time: 10/2
+  忍术大学习:
+    enable: true
+    time: 18/59
+  早上好:    #群聊早上好
+    enable: true
   早安:    #群聊早安问候
     enable: true
     time: 8/3
