--- a/run/ai_llm/config.yaml
+++ b/run/ai_llm/config.yaml
@@ -18,7 +18,7 @@ llm:
   max_history_length: 40 #最大上下文长度
   仁济模式: 
     随机回复概率: 0  #随机回复概率，0-100，0为不随机。
-    算法回复:
+    算法回复:     #数值越大越不易触发
       enable: false
       相似度阈值: 30
       频率阈值: 15
