--- a/run/resource_collector/config.yaml
+++ b/run/resource_collector/config.yaml
@@ -22,7 +22,8 @@ iwara:
   iwara_search_level: 0  #iwara搜索功能所需权限等级
   iwara_download_level: 9  #iwara下载功能所需权限等级
   iwara_gray_layer: true #是否开启iwara灰度图功能
-  zip_file: false #是否压缩文件
+  zip_file: true #是否压缩文件
+  zip_password: "123456" #压缩密码，留空则不设置
 JMComic:                  #禁漫相关功能设置
   anti_nsfw: black_and_white   #防吞策略，可选gif、black_and_white、no_censor
   gif_compress: false     #gif模式下是否压缩
