--- a/run/streaming_media/config.yaml
+++ b/run/streaming_media/config.yaml
@@ -1,6 +1,6 @@
 bili_dynamic:     #下面的设置暂不可用，请暂时不要修改
   enable: true    #是否开启动态推送功能
-  dynamic_interval: 300 #动态推送间隔时间，单位为秒
+  dynamic_interval: 1000 #动态检查间隔时间，单位为秒
   screen_shot_mode: "mobile" #mobile为移动端截图，pc为PC端截图
   draw_type: 2    #1代表用playwright（需要安装其余组件）；2代表本地Pillow绘图（有可能出错）
   is_QQ_chek: True #是否检测qq小程序里的视频链接
