--- a/framework_common/manshuo_draw/defalut_config.yaml
+++ b/framework_common/manshuo_draw/defalut_config.yaml
@@ -10,7 +10,7 @@ basic_set:
   img_path_save: data/pictures/cache  #若有图片保存需求，则会将文件保存在此处，基于‘Eridanus’文件夹
   debug: False                      #是否开启debug，开启后控制台会输出相应处理过程
   config_path: framework_common/manshuo_draw/defalut_config.yaml  #默认配置文件地址
-  is_abs_path_convert: False        #将文件路径转换为绝对路径（默认关闭，可能会有bug，但建议开发者打开以便于测试）
+  is_abs_path_convert: True        #将文件路径转换为绝对路径（默认关闭，可能会有bug，但建议开发者打开以便于测试）
                                     #注意：此处同时对传入的img路径进行转换，绝对路径初始值为‘Eridanus’，即bot所在文件夹
 
   #以下为层级的部分处理
@@ -23,7 +23,7 @@ basic_set:
     'color2': (236, 255, 252)
 
   is_rounded_corners_layer: True    #是否对层级进行圆角处理
-  rounded_corners_radius: 20        #层级的圆角弧度
+  rounded_layer_radius: 20        #层级的圆角弧度
 
   is_stroke_layer: True             #是否对层级进行描边处理
   stroke_layer_radius: 23           #描边的圆角弧度
@@ -36,22 +36,32 @@ basic_set:
 
   #以下为模块的的前置设置
   padding: 20                       #模块内间距
+  padding_with: 15                  #模块内元素之间的间距
+  padding_up: 20                    #模块内元素的上间距
 
-  font: framework_common/manshuo_draw/data/fort/LXGWWenKai-Regular.ttf  #字体路径
-  font_size: 24                     #字体大小
-  font_color: (0,0,0)               #字体颜色
+  font_common: framework_common/manshuo_draw/data/fort/LXGWWenKai-Regular.ttf  #字体路径
+  font_common_size: 24                     #字体大小
+  font_common_color: (0,0,0)               #字体颜色
 
-  is_rounded_corners_img: True      #是否对层级进行圆角处理
+  font_des: framework_common/manshuo_draw/data/fort/LXGWWenKai-Regular.ttf
+  font_des_size: 19
+  font_des_color: (148,148,148)
+
+  font_title: framework_common/manshuo_draw/data/fort/LXGWWenKai-Bold.ttf
+  font_title_size: 34
+  font_title_color: (0,0,0)
+
+  is_rounded_corners_img: True      #是否对模块进行圆角处理
   rounded_img_radius: 20            #圆角处理半径
 
-  is_stroke_img: True               #是否对层级进行描边处理
+  is_stroke_img: True               #是否对模块进行描边处理
   stroke_img_radius: 23             #描边的圆角弧度
   stroke_img_width: 10              #描边的圆角宽度
 
-  is_shadow_img: True               #是否对层级进行阴影处理
-  shadow_offset: 10                 #阴影的偏移量
-  shadow_opacity: 50                #阴影的透明度
-  blur_radius: 10                   #阴影模糊半径
+  is_shadow_img: True               #是否对模块进行阴影处理
+  shadow_offset_img: 10                 #阴影的偏移量
+  shadow_opacity_img: 50                #阴影的透明度
+  blur_radius_img: 10                   #阴影模糊半径
 
 
 backdrop:
@@ -64,15 +74,15 @@ backdrop:
 text:
   must_required_keys: {'content'}
   common:
-    padding_up: 20
     spacing: 1
 
 img:
-  label_font_path: framework_common/manshuo_draw/data/fort/LXGWWenKai-Regular.ttf
-  label_font_size: 34
-  label_font_color: (255,255,255)
+  font_label: framework_common/manshuo_draw/data/fort/LXGWWenKai-Regular.ttf
+  font_label_size: 34
+  font_label_color: (255,255,255)
   label: []                           #默认的label内容
   label_color: (251,114,153,255)      #默认label颜色
+
   is_rounded_corners_label: True      #是否对标签进行圆角处理
   rounded_label_radius: 10            #圆角处理半径
 
@@ -80,28 +90,62 @@ img:
   stroke_label_radius: 12             #描边的圆角弧度
   stroke_label_width: 10              #描边的圆角宽度
 
+  is_shadow_label: False               #是否对标签进行阴影处理
+  shadow_offset_label: 10                 #阴影的偏移量
+  shadow_opacity_label: 50                #阴影的透明度
+  blur_radius_label: 10                   #阴影模糊半径
+
   must_required_keys: {'img'}
 
+  number_per_row: default           #每行图片个数，默认即为九宫格，可自定义
+  is_crop: default                    #是否裁剪
+
   common:
-    number_per_row: default         #每行图片个数，默认即为九宫格，可自定义
-    padding_with: 15                #图片之间的间距
-    is_crop: default                #是否裁剪
+    must_required_keys: {'img'}
 
-
-  common_with_description:
+  common_with_des:
     must_required_keys: {'img','content'}
-    number_per_row: default           #每行图片个数，默认即为九宫格，可自定义
-    padding_with: 15                  #图片之间的间距
-    is_crop: False                    #是否裁剪
     description_color: (255,255,255,255)  #放置介绍区域的颜色
     max_des_length: 200
 
-    font_des: framework_common/manshuo_draw/data/fort/LXGWWenKai-Regular.ttf
-    font_des_size: 19
-    font_des_color: (148,148,148)
+  common_with_des_right:
+    must_required_keys: {'img','content'}
+    description_color: (255,255,255,255)  #放置介绍区域的颜色
+
+
 
 
 avatar:
+  #以下为字体的相关处理
+  font_name: framework_common/manshuo_draw/data/fort/LXGWWenKaiMono-Medium.ttf
+  font_name_size: 34
+  font_name_color: (251,114,153)
+  font_time: framework_common/manshuo_draw/data/fort/LXGWWenKai-Regular.ttf
+  font_time_size: 24
+  font_time_color: (148,148,148)
+
+  #以下为层级的部分处理，示例：可进行自定义
+  is_rounded_corners_img: True    #是否对层级进行圆角处理
+  rounded_img_radius: 50
+
+  is_stroke_img: True             #是否对层级进行描边处理
+  stroke_img_width: 10
+  stroke_img_radius: 55
+
+  is_shadow_img: False             #是否对层级进行阴影处理
+  shadow_offset_img: 10                 #阴影的偏移量
+  shadow_opacity_img: 50                #阴影的透明度
+  blur_radius_img: 8                   #阴影模糊半径
+
+  background: None
+  right_icon: None
+  type_software: None
+  is_shadow_font: False
+  software_list:
+    - {'type': 'bilibili','background':framework_common/manshuo_draw/data/img/bili.png,'right_icon':framework_common/manshuo_draw/data/img/bili_icon.png}
+
+
+
   common:
     must_required_keys: {'img','content'}
     number_per_row: 1         #默认一个，可以指定每行多少个头像
@@ -109,26 +153,7 @@ avatar:
     avatar_size: 100
     padding: 30
     padding_up_bottom: 15
-    padding_with: 15
     upshift: 0                     #上偏移量
 
-    #以下为字体的相关处理
-    name_font_path: framework_common/manshuo_draw/data/fort/LXGWWenKai-Regular.ttf
-    name_font_size: 34
-    name_font_color: (251,114,153)
-    time_font_path: framework_common/manshuo_draw/data/fort/LXGWWenKai-Regular.ttf
-    time_font_size: 24
-    time_font_color: (148,148,148)
 
-    #以下为层级的部分处理，示例：可进行自定义
-    is_rounded_corners_img: True    #是否对层级进行圆角处理
-    rounded_img_radius: 50
 
-    is_stroke_img: True             #是否对层级进行描边处理
-    stroke_img_width: 10
-    stroke_img_radius: 55
-
-    is_shadow_img: False             #是否对层级进行阴影处理
-    shadow_offset: 10                 #阴影的偏移量
-    shadow_opacity: 50                #阴影的透明度
-    blur_radius: 8                   #阴影模糊半径
