--- a/framework_common/manshuo_draw/defalut_config.yaml
+++ b/framework_common/manshuo_draw/defalut_config.yaml
@@ -142,8 +142,9 @@ avatar:
   type_software: None
   is_shadow_font: False
   software_list:
-    - {'type': 'bilibili','background':framework_common/manshuo_draw/data/img/bili.png,'right_icon':framework_common/manshuo_draw/data/img/bili_icon.png}
-
+    - {'type': 'bilibili','background':framework_common/manshuo_draw/data/img/type_software/bili.png,'right_icon':framework_common/manshuo_draw/data/img/type_software/bili_icon.png}
+    - {'type': 'dy','background':framework_common/manshuo_draw/data/img/type_software/dy.png,'right_icon':framework_common/manshuo_draw/data/img/type_software/dy_icon.png}
+    - {'type': 'lu','background':framework_common/manshuo_draw/data/img/type_software/lu.jpg,'right_icon':framework_common/manshuo_draw/data/img/type_software/lu_icon.png}
 
 
   common:
@@ -157,3 +158,14 @@ avatar:
 
 
 
+games:
+  LuRecordMake:
+    font_lu: framework_common/manshuo_draw/data/fort/LXGWWenKai-Regular.ttf
+    font_lu_size: 24
+    font_lu_color: (255,0,0)
+    font_date: framework_common/manshuo_draw/data/fort/LXGWWenKai-Regular.ttf
+    font_date_size: 40
+    font_date_color: (0,0,0)
+    number_per_row: 7           #每行图片个数，默认即为九宫格，可自定义
+    background: framework_common/manshuo_draw/data/img/games/lu/background_LU.jpg
+    img: False
